hard-gists/d883c3fe1402c7ced6fc/run.log
=== Docker Run Log for d883c3fe1402c7ced6fc ===
Started at: Mi 29. Okt 20:28:10 CET 2025

[2025-10-29 20:28:10] START: Running container for d883c3fe1402c7ced6fc
[2025-10-29 20:28:10] SUCCESS: Container bbf01df03fdc776298950611fa6f7cd95382cdc205429bd48f7a2a7afb510d9a started for d883c3fe1402c7ced6fc
=== Container logs for d883c3fe1402c7ced6fc ===
  File "/snippet.py", line 330
    print ica.exclude
    ^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for d883c3fe1402c7ced6fc ===
[2025-10-29 20:28:12] INFO: Container bbf01df03fdc776298950611fa6f7cd95382cdc205429bd48f7a2a7afb510d9a has stopped
